All Basic Features Completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="logo_description">Logo Description</string>
     <string name="sign_up_text">SIGN UP</string>
     <string name="sign_up_content_description"><![CDATA[Create Probo Account]]></string>
+    <string name="main_activity_toolbar_text">WELCOME</string>
+    <string name="sign_out_text">Log Out</string>
 </resources>
